--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -29,7 +29,7 @@
             <i class="fa fa-female fa-5x"></i>
             <label>用戶管理</label>
         </a>
-        <a href="other">
+        <a href="course-manage">
             <i class="fa fa-suitcase fa-5x"></i>
             <label>课程管理</label>
         </a>
