--- a/src/main/resources/static/courseManage.css
+++ b/src/main/resources/static/courseManage.css
@@ -54,3 +54,92 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #444;
 }
+
+table {
+    margin: auto;
+    border-collapse: collapse;
+    width: 80%;
+    color: #4F4F4F;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+th, td {
+    text-align: center;
+    padding: 8px;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #EEE;
+    color: #333;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #FAFAFA;
+}
+
+button.btn-danger {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+button.btn-danger:hover {
+    background-color: #c82333;
+}
+
+button.btn-choose {
+    background-color: #5cb85c;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+button.btn-choose:hover {
+    background-color: #4cae4c;
+}
+
+
+
+.confirmation-dialog-mask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10000;
+}
+
+.confirmation-dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    max-width: 400px;
+    width: 80%;
+    text-align: center;
+    z-index: 10001;
+}
+
+.confirmation-dialog h3 {
+    margin-top: 0;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+.btn-danger {
+    color: #fff;
+    background-color: #dc3545;
+}
