--- a/src/main/resources/templates/classChart.html
+++ b/src/main/resources/templates/classChart.html
@@ -7,18 +7,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.2/echarts.common.min.js" integrity="sha512-Zo4VYLfEAz0Vxyiohkl7bCDIWl2uQ8yZc/StiJ8RFEK6ms5eXtvOOErLhnGHxuTO1+r3jGBWAzU4wu1AK2aTRg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
+<input type="text" id="className" placeholder="输入课程编号">
+<button id="myButton">确认</button>
 <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
 <div id="singleClassScoreBar" style="width: 1000px;height:400px;"></div>
 <div id="singleClassScorePie" style="width: 600px;height:400px;"></div>
-<div id="allClassInfoBar" style="width: 600px;height:400px;"></div>
+<div id="allClassInfoBar" style="width: 600px;height:2000px;"></div>
 
 <script th:inline="javascript">
+    //-----------------------逻辑代码----------------------------
+    const myInput = document.getElementById("className");
+    const myButton = document.getElementById("myButton");
+    var inputValue
+
     var xmlDataList = [[${xmlDataList}]]
     var classList = xmlDataList[0]
     var studentList = xmlDataList[1]
     var choiceList = xmlDataList[2]
     var teacherList = xmlDataList[3]
+    var classNames = classList.map((obj)=> obj.name)
+    var classIds = classList.map((obj)=> obj.id)
 
+    console.log(classList.find(item => item.id == inputValue))
 
     function getScoreDistribution(cid, records) { //查询某门课程的成绩分数段分布
         const filtered = records.filter(record => record.cid == cid);
@@ -50,144 +60,164 @@
         return distribution;
     }
 
-    // 基于准备好的dom，初始化echarts实例
-    var singleClassScoreBar = echarts.init(document.getElementById('singleClassScoreBar')); // 查找课程名，显示单门课信息
-    var singleClassScorePie = echarts.init(document.getElementById('singleClassScorePie'));
-    var allClassInfoBar = echarts.init(document.getElementById('allClassInfoBar')); //显示多门课程的成绩及选课信息
-    // 指定图表的配置项和数据
-    var optionSingleClassScoreBar = {
-        title: {
-            text: '课程成绩分布'
-        },
-        tooltip: {},
-        legend: {
-            data: ['人数']
-        },
-        xAxis: {
-            data: ['<10', '10~20', '20~30', '30~40', '40~50', '50~60', '60~70','70~80','80~90','>90']
-        },
-        yAxis: {},
-        series: [
-            {
-                name: '人数',
-                type: 'bar',
-                data: getScoreDistribution(5000,choiceList)
+    function getScoreRateDistribution(cid, records) { //查询某门课程的成绩优、良、合格、不合格的分布
+        const filtered = records.filter(record => record.cid == cid);
+        const distribution = Array(4).fill(0);
+        var goodData = {value : 0, name : '优秀'}
+        var niceData = {value : 0, name : '良好'}
+        var qualifiedData = {value : 0, name : '合格'}
+        var failedData = {value : 0, name : '不合格'}
+        var pieData = [goodData,niceData,qualifiedData,failedData]
+        filtered.forEach(record => {
+            const score = parseInt(record.score);
+            if (score < 60) {
+                pieData[3].value++;
+            } else if (score < 80) {
+                pieData[2].value++;
+            } else if (score < 90) {
+                pieData[1].value++;
+            } else {
+                pieData[0].value++;
             }
-        ]
-    };
-    console.log(getScoreDistribution(5000,choiceList))
+        });
+        return pieData;
+    }
 
-    var optionSingleClassScorePie = {
-        title: {
-            text: '课程成绩分布',
-            left: 'center'
-        },
-        tooltip: {
-            trigger: 'item'
-        },
-        series: [
-            {
-                tooltip: {},
-                type: 'pie',
-                data: [
-                    {
-                        value: 30,
-                        name: '优秀'
-                    },
-                    {
-                        value: 30,
-                        name: '良好'
-                    },
-                    {
-                        value: 30,
-                        name: '合格'
-                    },
-                    {
-                        value:10,
-                        name:'不合格'
-                    }
-                ]
+    function getAvgScore(arr, cids) {
+        const obj = arr.reduce((acc, cur) => {
+            const { cid, score } = cur;
+            if (!acc[cid]) {
+                acc[cid] = [score];
+            } else {
+                acc[cid].push(score);
             }
-        ]
-    };
-    var optionAllClassInfoBar = {
-        title: {
-            text: '课程信息'
-        },
-        tooltip: {},
-        legend: {
-            data: ['均分','中位数','选课人数']
-        },
-        xAxis: {},
-        yAxis: {
-            data: ['软件工程', '编译原理', '操作系统']
-        },
-        series: [
-            {
-                name: '均分',
-                type: 'bar',
-                data: [80, 90, 96]
+            return acc;
+        }, {});
+
+        const result = cids.map(cid => {
+            const scores = obj[cid] || [];
+            const sum = scores.reduce((acc, cur) => acc + parseInt(cur), 0);
+            const avg = scores.length > 0 ? sum / scores.length : 0;
+            return avg;
+        });
+
+        return result;
+    }
+
+    function getMedianScore(arr, cids) {
+        const obj = arr.reduce((acc, cur) => {
+            const { cid, score } = cur;
+            if (!acc[cid]) {
+                acc[cid] = [score];
+            } else {
+                acc[cid].push(score);
+            }
+            return acc;
+        }, {});
+
+        const result = cids.map(cid => {
+            const scores = obj[cid] || [];
+            const sortedScores = scores.sort((a, b) => parseInt(a) - parseInt(b));
+            const sum = sortedScores.reduce((acc, cur) => acc + parseInt(cur), 0);
+            const avg = scores.length > 0 ? sum / scores.length : 0;
+            const len = sortedScores.length;
+            const median = len % 2 === 0 ? (parseInt(sortedScores[len / 2 - 1]) + parseInt(sortedScores[len / 2])) / 2 : parseInt(sortedScores[(len - 1) / 2]);
+            return median;
+        });
+
+        return result;
+    }
+
+    function countRecordsByCid(records, cids) {
+        return cids.map(cid => records.reduce((count, record) => {
+            return count + (record.cid === cid ? 1 : 0);
+        }, 0));
+    }
+
+    //-----------------------图表代码----------------------------
+
+    myButton.addEventListener("click", function() {
+        inputValue = myInput.value;
+        var cid = inputValue;
+        // 基于准备好的dom，初始化echarts实例
+        var singleClassScoreBar = echarts.init(document.getElementById('singleClassScoreBar')); // 查找课程名，显示单门课信息
+        var singleClassScorePie = echarts.init(document.getElementById('singleClassScorePie'));
+        var allClassInfoBar = echarts.init(document.getElementById('allClassInfoBar')); //显示多门课程的成绩及选课信息
+        // 指定图表的配置项和数据
+        var optionSingleClassScoreBar = {
+            title: {
+                text: '课程成绩分布'
             },
-            {
-                name: '中位数',
-                type: 'bar',
-                data: [85, 89, 90]
+            tooltip: {},
+            legend: {
+                data: ['人数']
             },
-            {
-                name: '选课人数',
-                type: 'bar',
-                data: [100, 90,120]
-            }
-        ]
-    };
-    var optionTeacherRatePie = {
-        title: {
-            text: '教师评价',
-            left: 'center'
-        },
-        tooltip: {
-            trigger: 'item'
-        },
-        series: [
-            {
-                color: [
-                    '#5a70c7',
-                    '#98cc72',
-                    '#f5c854',
-                    '#22a6b3',
-                    'rgba(0, 0, 0, 0)'
-                ],
-                tooltip: {},
-                type: 'pie',
-                data: [
-                    {
-                        value: 20,
-                        name: '出勤情况'
-                    },
-                    {
-                        value: 20,
-                        name: '师德表现'
-                    },
-                    {
-                        value: 20,
-                        name: '教学教研'
-                    },
-                    {
-                        value: 20,
-                        name:'工作成绩'
-                    },
-                    {
-                        value: 20, //100 - 以上几项的分数
-                    }
-                ]
-            }
-        ]
-    };
-    // 使用刚指定的配置项和数据显示图表。
-    singleClassScoreBar.setOption(optionSingleClassScoreBar);
-    singleClassScorePie.setOption(optionSingleClassScorePie);
-    allClassInfoBar.setOption(optionAllClassInfoBar)
-    teacherRatePie.setOption(optionTeacherRatePie)
+            xAxis: {
+                data: ['<10', '10~20', '20~30', '30~40', '40~50', '50~60', '60~70', '70~80', '80~90', '>90']
+            },
+            yAxis: {},
+            series: [
+                {
+                    name: '人数',
+                    type: 'bar',
+                    data: getScoreDistribution(cid, choiceList)
+                }
+            ]
+        };
+
+        var optionSingleClassScorePie = {
+            title: {
+                text: '课程成绩分布',
+                left: 'center'
+            },
+            tooltip: {
+                trigger: 'item'
+            },
+            series: [
+                {
+                    tooltip: {},
+                    type: 'pie',
+                    data: getScoreRateDistribution(cid, choiceList)
+                }
+            ]
+        };
+
+        var optionAllClassInfoBar = {
+            title: {
+                text: '课程信息'
+            },
+            tooltip: {},
+            legend: {
+                data: ['均分', '中位数', '选课人数']
+            },
+            xAxis: {},
+            yAxis: {
+                data: classNames
+            },
+            series: [
+                {
+                    name: '均分',
+                    type: 'bar',
+                    data: getAvgScore(choiceList, classIds)
+                },
+                {
+                    name: '中位数',
+                    type: 'bar',
+                    data: getMedianScore(choiceList, classIds)
+                },
+                {
+                    name: '选课人数',
+                    type: 'bar',
+                    data: countRecordsByCid(choiceList, classIds)
+                }
+            ]
+        };
+
+        // 使用刚指定的配置项和数据显示图表。
+        singleClassScoreBar.setOption(optionSingleClassScoreBar);
+        singleClassScorePie.setOption(optionSingleClassScorePie);
+        allClassInfoBar.setOption(optionAllClassInfoBar);
+    })
 </script>
 </body>
 </html>
