--- a/src/main/resources/templates/classChart.html
+++ b/src/main/resources/templates/classChart.html
@@ -7,12 +7,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.2/echarts.common.min.js" integrity="sha512-Zo4VYLfEAz0Vxyiohkl7bCDIWl2uQ8yZc/StiJ8RFEK6ms5eXtvOOErLhnGHxuTO1+r3jGBWAzU4wu1AK2aTRg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-<input type="text" id="className" placeholder="输入课程编号">
-<button id="myButton">确认</button>
-<!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-<div id="singleClassScoreBar" style="width: 1000px;height:400px;"></div>
-<div id="singleClassScorePie" style="width: 600px;height:400px;"></div>
-<div id="allClassInfoBar" style="width: 600px;height:2000px;"></div>
+<div class="container">
+    <input type="text" id="className" placeholder="输入课程编号">
+    <button class="btn" id="myButton">确认</button>
+    <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
+    <div id="singleClassScoreBar" style="width: 1600px;height:400px;"></div>
+    <div id="singleClassScorePie" style="width: 600px;height:400px;"></div>
+    <div id="allClassInfoBar" style="width: 600px;height:2000px;"></div>
+</div>
 
 <script th:inline="javascript">
     //-----------------------逻辑代码----------------------------
@@ -32,29 +34,14 @@
 
     function getScoreDistribution(cid, records) { //查询某门课程的成绩分数段分布
         const filtered = records.filter(record => record.cid == cid);
-        const distribution = Array(10).fill(0);
+        const distribution = Array(20).fill(0);
         filtered.forEach(record => {
             const score = parseInt(record.score);
-            if (score < 10) {
-                distribution[0]++;
-            } else if (score < 20) {
-                distribution[1]++;
-            } else if (score < 30) {
-                distribution[2]++;
-            } else if (score < 40) {
-                distribution[3]++;
-            } else if (score < 50) {
-                distribution[4]++;
-            } else if (score < 60) {
-                distribution[5]++;
-            } else if (score < 70) {
-                distribution[6]++;
-            } else if (score < 80) {
-                distribution[7]++;
-            } else if (score < 90) {
-                distribution[8]++;
+            const index = Math.floor(score / 5);
+            if (index < 20) {
+                distribution[index]++;
             } else {
-                distribution[9]++;
+                distribution[19]++;
             }
         });
         return distribution;
@@ -153,7 +140,7 @@
                 data: ['人数']
             },
             xAxis: {
-                data: ['<10', '10~20', '20~30', '30~40', '40~50', '50~60', '60~70', '70~80', '80~90', '>90']
+                data: ['<5', '5~10', '10~15', '15~20', '20~25', '25~30', '30~35', '35~40', '40~45', '45~50', '50~55', '55~60', '60~65', '65~70', '70~75', '75~80', '80~85', '85~90', '90~95', '>95']
             },
             yAxis: {},
             series: [
